# trmnl

./: .prettierrc  Gemfile  mise.toml
plugins/climbing-gym/: .trmnlp.yml
plugins/climbing-gym/src/: full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml  shared.liquid
plugins/climbing-gyms/: .trmnlp.yml
plugins/climbing-gyms/src/: frameworkv2.css  full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml  shared.liquid
plugins/hello-world/: .trmnlp.yml
plugins/hevy/: .trmnlp.yml
plugins/hevy/src/: full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml  shared.liquid
workers/rock-gym-pro-capacity/: Cargo.toml  wrangler.toml
workers/rock-gym-pro-capacity/src/: lib.rs
